Mon Aug 24 13:41:49 CDT 1998  Larry Ewing  <lewing@gimp.org>

	* app/fileops.c (file_save): move the mru and docindex calls to
	before the call to gimp_image_set_filename so that they are still
	accessing valid memory.  Fixes the filename corruption seen in
	these interfaces.
	* app/gimpimage.c: added a warning about the side effect that
	caused the above bug.
	
Mon Aug 24 09:34:37 PDT 1998 Manish Singh <yosh@gimp.org>

	* plug-ins/depthmerge.c
	* plug-ins/fli.[ch]
	* plug-ins/gfli.c: updates from the registry

	* plug-ins/pnm/pnm.c: fix for non-interactive mode

	* plug-ins/fractaltrace/fractaltrace.c: minor code cleanups

Mon Aug 24 09:20:38 PDT 1998 Manish Singh <yosh@gimp.org>

	* configure.in: make xdelta not built by default, so poor users
	aren't confused

	* libgimp/gimp.c
	* app/blob.c
	* app/errors.c
	* plug-ins/script-fu/script-fu-server.c: fixes for glib changes with
	s/g_debug/g_on_error_debug/ and s/g_vsprintf/g_strdup_vprintf/

Fri Aug 21 17:25:34 CDT 1998  Larry Ewing  <lewing@gimp.org>

	* app/fileops.c: fixed a lingering bug that occured from the
	removal of the id system.  This should fix tigert's save problems.

1998-08-21  Chris Lahey  <clahey@umich.edu>

	* app/docindexif.c (create_idea_menu): 
	* app/docindex.c (make_idea_window): 
		Got rid of the menu bar in the document index.

1998-08-19  Raph Levien  <raph@gimp.org>

	This is the GdkRgb integration.

	* app/gximage.c (gximage_put): Uses gdk_draw_rgb_image rather
	than gdk_draw_image.

	* app/image_render.c: gutted most of this, as it is now subsumed
	by GdkRgb. In the process, gamma != 1.0 doesn't work anymore.
	Also, speedups are almost certainly possible in a bunch of cases.

	* app/info_window.c (get_shades): compiles and runs, but is
	not functional.

	* app/colormaps.c: gutted

	* app/color_select.c: changed dither to max

	A few things remain: the dithering is _not_ correctly aligned for
	scrolling - looks like I'll need to add some more API to GdkRgb